Fixing the encoding String in URLDecoder